[project]
name = "change-background"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "safetensors>=0.7.0",
    "segment-anything>=1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "xformers>=0.0.35",
]
